--- a/workshop/package.json
+++ b/workshop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.michelmena.workshop",
+  "name": "com.michaelmena.workshop",
   "displayName": "Workshop",
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
@@ -14,17 +14,21 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^9.0.0",
+    "cordova-browser": "^6.0.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-console": {}
+      "cordova-plugin-console": {},
+      "cordova-plugin-dialogs": {}
     },
     "platforms": [
+      "browser",
       "android"
     ]
   }
