--- a/workshop/package.json
+++ b/workshop/package.json
@@ -15,9 +15,12 @@
   "devDependencies": {
     "cordova-android": "^9.0.0",
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
@@ -25,7 +28,12 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-console": {},
-      "cordova-plugin-dialogs": {}
+      "cordova-plugin-dialogs": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-contacts": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "browser",
